Ajout Unit Test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.29)
-project(Projet_POO_Groupe_2)
+project(Project_POO_VF)
 
 include(FetchContent)
 set(BUILD_SHARED_LIBS OFF)
@@ -12,16 +12,21 @@ FetchContent_MakeAvailable(SFML)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Projet_POO_Groupe_2 main.cpp
+add_executable(Project_POO_VF src/main.cpp
         grid.cpp
         grid.h
         FileManager.h
         FileManager.cpp
-        cell.cpp
+       	cell.cpp
         cell.h
         game.cpp
         game.h
         Interface.cpp
-        Interface.h)
+        Interface.h
+        tst/Cell_Test.cpp
+        tst/File_Test.cpp
+        tst/Grid_Test.cpp
+        tst/Performance_Test.cpp
+)
 
-target_link_libraries(Projet_POO_Groupe_2 sfml-graphics)
+target_link_libraries(Project_POO_VF sfml-graphics)
